force-app/main/default/objects/Opportunity/fields/EstimatedIssuedWC_03__c.field-meta.xml
<CustomField>
    <fullName>EstimatedIssuedWC_03__c</fullName>
    <label>発行WC③×係数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>