force-app/main/default/objects/Opportunity/fields/EstimatedTotalWC1__c.field-meta.xml
<CustomField>
    <fullName>EstimatedTotalWC1__c</fullName>
    <formula>ROUND(TotalWC__c   *  Probability1__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WC×係数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>