force-app/main/default/objects/Opportunity/fields/EvaluationActivity__c.field-meta.xml
<CustomField>
    <fullName>EvaluationActivity__c</fullName>
    <label>案件取組 評価活動</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>実施</fullName>
            </value>
            <value>
                <fullName>未実施</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>