force-app/main/default/objects/Opportunity/fields/ExportCategory__c.field-meta.xml
<CustomField>
    <fullName>ExportCategory__c</fullName>
    <label>輸出区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 国内</fullName>
                <default>true</default>
                <label>0 国内</label>
            </value>
            <value>
                <fullName>1 直輸為替無</fullName>
            </value>
            <value>
                <fullName>2 間接輸出</fullName>
            </value>
            <value>
                <fullName>3 直輸為替有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>