force-app/main/default/objects/Opportunity/fields/FacilityGC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>FacilityGC_Remarks__c</fullName>
    <label>ゼネコン 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>