force-app/main/default/objects/Opportunity/fields/FacilitySC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>FacilitySC_Remarks__c</fullName>
    <label>サブコン 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>