force-app/main/default/objects/Opportunity/fields/factory__c.field-meta.xml
<CustomField>
    <fullName>factory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>場所別</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>案件</relationshipLabel>
    <relationshipName>FactoryProducts</relationshipName>
    <type>Lookup</type>
</CustomField>