force-app/main/default/objects/Opportunity/fields/FeeRate1__c.field-meta.xml
<CustomField>
    <fullName>FeeRate1__c</fullName>
    <formula>IF(
  TotalCP__c &lt;= 2000000,
  TotalCP__c * 0.08,
  2000000 * 0.08
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>手数料率（~2000）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>