force-app/main/default/objects/Opportunity/fields/FeeRate2__c.field-meta.xml
<CustomField>
    <fullName>FeeRate2__c</fullName>
    <formula>IF(
  TotalCP__c &lt;= 2000000,
  0,
  IF(
    AND(
      TotalCP__c &gt; 2000000, 
      TotalCP__c &lt;= 6000000
    ),
    (TotalCP__c - 2000000) * 0.05,
    (6000000 - 2000000) * 0.05
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>手数料率（~6000）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>