force-app/main/default/objects/Opportunity/fields/FeeRate3__c.field-meta.xml
<CustomField>
    <fullName>FeeRate3__c</fullName>
    <formula>IF(
  TotalCP__c &lt;= 6000000,
  0,
  IF(
    AND(
      TotalCP__c &gt; 6000000,
      TotalCP__c &lt;= 10000000
    ),
    (TotalCP__c - 6000000) * 0.04,
    (10000000 - 6000000) * 0.04
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>手数料率（~10000）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>