force-app/main/default/objects/Opportunity/fields/FeeStandardAmount__c.field-meta.xml
<CustomField>
    <fullName>FeeStandardAmount__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(Handling__c, &apos;委嘱&apos;),
    ISPICKVAL(Handling__c, &apos;協力&apos;)
  ),
  FeeRate1__c + FeeRate2__c + FeeRate3__c + FeeRate4__c + FeeRate5__c + FeeRate6__c + FeeRate7__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>１．手数料基準額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>