force-app/main/default/objects/Opportunity/fields/FileComment__c.field-meta.xml
<CustomField>
    <fullName>FileComment__c</fullName>
    <label>添付ファイルコメント・関連URL</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>