force-app/main/default/objects/Opportunity/fields/FinalPrice__c.field-meta.xml
<CustomField>
    <fullName>FinalPrice__c</fullName>
    <label>決定価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>