force-app/main/default/objects/Opportunity/fields/ForeignCurrencyCP__c.field-meta.xml
<CustomField>
    <fullName>ForeignCurrencyCP__c</fullName>
    <label>外貨CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>