force-app/main/default/objects/Opportunity/fields/FutureTechAdvantage__c.field-meta.xml
<CustomField>
    <fullName>FutureTechAdvantage__c</fullName>
    <label>次回以降の工事での技術優位性構築</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>