force-app/main/default/objects/Opportunity/fields/GC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>GC_Remarks__c</fullName>
    <label>商流1（元請） 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>