force-app/main/default/objects/Opportunity/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <formula>TotalCP__c  - TotalWC__c  - Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>１．商談粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>