force-app/main/default/objects/Opportunity/fields/GrossProfit__c.field-meta.xml
<CustomField>
    <fullName>GrossProfit__c</fullName>
    <label>粗利</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>