force-app/main/default/objects/Opportunity/fields/Handling__c.field-meta.xml
<CustomField>
    <fullName>Handling__c</fullName>
    <label>扱方</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>直扱</fullName>
            </value>
            <value>
                <fullName>委嘱</fullName>
            </value>
            <value>
                <fullName>協力</fullName>
            </value>
            <value>
                <fullName>仕切</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>