force-app/main/default/objects/Opportunity/fields/InformationFrom__c.field-meta.xml
<CustomField>
    <fullName>InformationFrom__c</fullName>
    <label>【削除予定】情報入手先</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>施主</fullName>
            </value>
            <value>
                <fullName>設計事務所</fullName>
            </value>
            <value>
                <fullName>ゼネコン</fullName>
            </value>
            <value>
                <fullName>サブコン</fullName>
            </value>
            <value>
                <fullName>代理店</fullName>
            </value>
            <value>
                <fullName>MPEC</fullName>
            </value>
            <value>
                <fullName>維持管理会社</fullName>
            </value>
            <value>
                <fullName>公開情報（新聞・WEB・官報等）</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>