force-app/main/default/objects/Opportunity/fields/InformationFromOther__c.field-meta.xml
<CustomField>
    <fullName>InformationFromOther__c</fullName>
    <label>【削除予定】情報入手先 その他</label>
    <length>80</length>
    <type>Text</type>
</CustomField>