force-app/main/default/objects/Opportunity/fields/InternalRateNum__c.field-meta.xml
<CustomField>
    <fullName>InternalRateNum__c</fullName>
    <label>社内レート</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>