force-app/main/default/objects/Opportunity/fields/JV__c.field-meta.xml
<CustomField>
    <fullName>JV__c</fullName>
    <label>JV組成状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>打診済み(合意)</fullName>
            </value>
            <value>
                <fullName>打診済み(未合意)</fullName>
            </value>
            <value>
                <fullName>未打診</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>