force-app/main/default/objects/Opportunity/fields/KOUJI_SYU__c.field-meta.xml
<CustomField>
    <fullName>KOUJI_SYU__c</fullName>
    <label>工事種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電気工事</fullName>
            </value>
            <value>
                <fullName>電気通信工事</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
                <label>その他（物品・役務）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>