force-app/main/default/objects/Opportunity/fields/LastModifiedDateInOpp__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateInOpp__c</fullName>
    <label>案件最終更新日</label>
    <type>Date</type>
</CustomField>