force-app/main/default/objects/Opportunity/fields/LastSRAggregateDate__c.field-meta.xml
<CustomField>
    <fullName>LastSRAggregateDate__c</fullName>
    <description>SR情報を集計して案件を更新した日時</description>
    <label>最終SR集計日時</label>
    <type>DateTime</type>
</CustomField>