force-app/main/default/objects/Opportunity/fields/Latest_Forecast_GP__c.field-meta.xml
<CustomField>
    <fullName>Latest_Forecast_GP__c</fullName>
    <formula>Latest_Forecast_TotalCP__c - Latest_Forecast_TotalWC__c - Latest_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>３．最終予想粗利（最新）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>