force-app/main/default/objects/Opportunity/fields/Latest_Forecast_TotalCP__c.field-meta.xml
<CustomField>
    <fullName>Latest_Forecast_TotalCP__c</fullName>
    <label>３．最終予想CP（最新）</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>