force-app/main/default/objects/Opportunity/fields/Latest_Forecast_WCPercent__c.field-meta.xml
<CustomField>
    <fullName>Latest_Forecast_WCPercent__c</fullName>
    <formula>Latest_Forecast_TotalWC__c / Latest_Forecast_TotalCP__c</formula>
    <label>３．最終予想WC率（最新）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>