force-app/main/default/objects/Opportunity/fields/Latest_Margin__c.field-meta.xml
<CustomField>
    <fullName>Latest_Margin__c</fullName>
    <label>３．SR手数料（最新）</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>