force-app/main/default/objects/Opportunity/fields/Latest_SRInfoUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>Latest_SRInfoUpdateDate__c</fullName>
    <label>３．SR情報最新取得日</label>
    <type>Date</type>
</CustomField>