force-app/main/default/objects/Opportunity/fields/Latest_TC__c.field-meta.xml
<CustomField>
    <fullName>Latest_TC__c</fullName>
    <label>３．SRTC（最新）</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>