force-app/main/default/objects/Opportunity/fields/Latest_TCRate__c.field-meta.xml
<CustomField>
    <fullName>Latest_TCRate__c</fullName>
    <formula>Latest_TC__c / Latest_TotalCP__c</formula>
    <label>３．SRTC率（最新）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>