force-app/main/default/objects/Opportunity/fields/Latest_WCPercent__c.field-meta.xml
<CustomField>
    <fullName>Latest_WCPercent__c</fullName>
    <formula>Latest_TotalWC__c / Latest_TotalCP__c</formula>
    <label>３．SRWC率（最新）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>