force-app/main/default/objects/Opportunity/fields/LostReason__c.field-meta.xml
<CustomField>
    <fullName>LostReason__c</fullName>
    <label>案件失注要因</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>技術優位性</fullName>
            </value>
            <value>
                <fullName>総合評価</fullName>
            </value>
            <value>
                <fullName>積算精度</fullName>
            </value>
            <value>
                <fullName>ランダム・くじ</fullName>
            </value>
            <value>
                <fullName>コスト</fullName>
            </value>
            <value>
                <fullName>技術者配置不可</fullName>
            </value>
            <value>
                <fullName>納期対応不可</fullName>
            </value>
            <value>
                <fullName>施主意向</fullName>
            </value>
            <value>
                <fullName>ゼネサブ意向</fullName>
            </value>
            <value>
                <fullName>営業・提案不足</fullName>
            </value>
            <value>
                <fullName>他社動向読み違い</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>互恵</fullName>
                <isActive>false</isActive>
                <label>互恵</label>
            </value>
            <value>
                <fullName>仕様対応不可</fullName>
                <isActive>false</isActive>
                <label>仕様対応不可</label>
            </value>
            <value>
                <fullName>価格追従不可</fullName>
                <isActive>false</isActive>
                <label>価格追従不可</label>
            </value>
            <value>
                <fullName>入札価格読み違い</fullName>
                <isActive>false</isActive>
                <label>入札価格読み違い</label>
            </value>
            <value>
                <fullName>営業不足</fullName>
                <isActive>false</isActive>
                <label>営業不足</label>
            </value>
            <value>
                <fullName>技術提案不足</fullName>
                <isActive>false</isActive>
                <label>技術提案不足</label>
            </value>
            <value>
                <fullName>損益悪化回避</fullName>
                <isActive>false</isActive>
                <label>損益悪化回避</label>
            </value>
            <value>
                <fullName>現場意向</fullName>
                <isActive>false</isActive>
                <label>現場意向</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>