force-app/main/default/objects/Opportunity/fields/LostReason_Other__c.field-meta.xml
<CustomField>
    <fullName>LostReason_Other__c</fullName>
    <label>失注要因その他</label>
    <type>TextArea</type>
</CustomField>