force-app/main/default/objects/Opportunity/fields/LostType__c.field-meta.xml
<CustomField>
    <fullName>LostType__c</fullName>
    <label>失注/削除区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>失注</fullName>
            </value>
            <value>
                <fullName>削除</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>