force-app/main/default/objects/Opportunity/fields/MainCompany_Remarks__c.field-meta.xml
<CustomField>
    <fullName>MainCompany_Remarks__c</fullName>
    <label>決定権社 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>