force-app/main/default/objects/Opportunity/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>１．商談手数料</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>