force-app/main/default/objects/Opportunity/fields/MarginMultipledByProbability__c.field-meta.xml
<CustomField>
    <fullName>MarginMultipledByProbability__c</fullName>
    <formula>Margin__c  *  Probability1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>手数料×係数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>