force-app/main/default/objects/Opportunity/fields/MasterPlan__c.field-meta.xml
<CustomField>
    <fullName>MasterPlan__c</fullName>
    <label>ﾏｽﾀｰﾌﾟﾗﾝ作成</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>