force-app/main/default/objects/Opportunity/fields/migrationOppNumber__c.field-meta.xml
<CustomField>
    <fullName>migrationOppNumber__c</fullName>
    <externalId>true</externalId>
    <label>移行用案件番号</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>