force-app/main/default/objects/Opportunity/fields/MPEC_opp__c.field-meta.xml
<CustomField>
    <fullName>MPEC_opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>協業案件</label>
    <type>Checkbox</type>
</CustomField>