force-app/main/default/objects/Opportunity/fields/NeedConstruction__c.field-meta.xml
<CustomField>
    <fullName>NeedConstruction__c</fullName>
    <label>工事有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>無</fullName>
            </value>
            <value>
                <fullName>有（技術者配置：要）</fullName>
            </value>
            <value>
                <fullName>有（技術者配置：不要）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>