force-app/main/default/objects/Opportunity/fields/NotInputAllReqFields__c.field-meta.xml
<CustomField>
    <fullName>NotInputAllReqFields__c</fullName>
    <formula>IF(IsInputAllReqFields__c = False, &apos;★案件の必須項目（赤＊の項目）等が全て入力されておりません。&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>必須項目未入力アラート</label>
    <type>Text</type>
</CustomField>