force-app/main/default/objects/Opportunity/fields/OppNumber__c.field-meta.xml
<CustomField>
    <fullName>OppNumber__c</fullName>
    <displayFormat>OP-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>案件番号</label>
    <type>AutoNumber</type>
</CustomField>