force-app/main/default/objects/Opportunity/fields/OpportunityNote__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNote__c</fullName>
    <label>案件メモ</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>