force-app/main/default/objects/Opportunity/fields/OpportunityNumber_Hyphenless__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber_Hyphenless__c</fullName>
    <externalId>true</externalId>
    <label>商談番号（ハイフンなし）</label>
    <length>30</length>
    <type>Text</type>
</CustomField>