force-app/main/default/objects/Opportunity/fields/OpportunityOverview__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOverview__c</fullName>
    <inlineHelpText>文字数上限1000字。案件概要に記載した内容がCRMで見積・応札伺いを作成する際に転記される予定です。</inlineHelpText>
    <label>案件概要</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>