force-app/main/default/objects/Opportunity/fields/OpportunityOwner__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwner__c</fullName>
    <description>案件の所有者をグローバル検索で検索するために、ワークフローによってテキストに自動入力させる。</description>
    <label>案件 所有者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>