force-app/main/default/objects/Opportunity/fields/OpportunityOwnersDivision__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnersDivision__c</fullName>
    <formula>TEXT(Owner.DepartmentAndDivision__c )</formula>
    <label>所有者の本支社</label>
    <type>Text</type>
</CustomField>