force-app/main/default/objects/Opportunity/fields/OpportunityResultAlert__c.field-meta.xml
<CustomField>
    <fullName>OpportunityResultAlert__c</fullName>
    <formula>IF (AND( TEXT(StageName) = &quot;受注・オーダー管理&quot;, ISBLANK(FinalPrice__c)) , &apos;★決定金額が入力されていません&apos;,&apos;&apos;)</formula>
    <label>商談結果アラート</label>
    <type>Text</type>
</CustomField>