force-app/main/default/objects/Opportunity/fields/Order_Forecast_GP__c.field-meta.xml
<CustomField>
    <fullName>Order_Forecast_GP__c</fullName>
    <formula>Order_Forecast_TotalCP__c - Order_Forecast_TotalWC__c - Order_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>２．最終予想粗利（受注時）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>