force-app/main/default/objects/Opportunity/fields/Order_Forecast_TCRate__c.field-meta.xml
<CustomField>
    <fullName>Order_Forecast_TCRate__c</fullName>
    <formula>Order_Forecast_TC__c / Order_Forecast_TotalCP__c</formula>
    <label>２．最終予想TC率（受注時）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>