force-app/main/default/objects/Opportunity/fields/Order_Forecast_TotalCP__c.field-meta.xml
<CustomField>
    <fullName>Order_Forecast_TotalCP__c</fullName>
    <label>２．最終予想CP（受注時）</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>