force-app/main/default/objects/Opportunity/fields/Order_Forecast_WCPercent__c.field-meta.xml
<CustomField>
    <fullName>Order_Forecast_WCPercent__c</fullName>
    <formula>Order_Forecast_TotalWC__c / Order_Forecast_TotalCP__c</formula>
    <label>２．最終予想WC率（受注時）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>