force-app/main/default/objects/Opportunity/fields/Order_Margin__c.field-meta.xml
<CustomField>
    <fullName>Order_Margin__c</fullName>
    <label>２．SR手数料（受注時）</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>