force-app/main/default/objects/Opportunity/fields/Order_OrderDate__c.field-meta.xml
<CustomField>
    <fullName>Order_OrderDate__c</fullName>
    <label>２．受注年月日</label>
    <type>Date</type>
</CustomField>