force-app/main/default/objects/Opportunity/fields/Order_TC__c.field-meta.xml
<CustomField>
    <fullName>Order_TC__c</fullName>
    <label>２．SRTC（受注時）</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>