force-app/main/default/objects/Opportunity/fields/Order_TCRate__c.field-meta.xml
<CustomField>
    <fullName>Order_TCRate__c</fullName>
    <formula>Order_TC__c/Order_TotalCP__c</formula>
    <label>２．SRTC率（受注時）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>