force-app/main/default/objects/Opportunity/fields/Order_TotalWC__c.field-meta.xml
<CustomField>
    <fullName>Order_TotalWC__c</fullName>
    <label>２．SRWC（受注時）</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>