force-app/main/default/objects/Opportunity/fields/Order_WCPercent__c.field-meta.xml
<CustomField>
    <fullName>Order_WCPercent__c</fullName>
    <formula>Order_TotalWC__c / Order_TotalCP__c</formula>
    <label>２．SRWC率（受注時）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>