force-app/main/default/objects/Opportunity/fields/OrderCertainty__c.field-meta.xml
<CustomField>
    <fullName>OrderCertainty__c</fullName>
    <label>受注確度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高</fullName>
            </value>
            <value>
                <fullName>低</fullName>
            </value>
            <value>
                <fullName>他社と同等</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>