force-app/main/default/objects/Opportunity/fields/OrderExpectation__c.field-meta.xml
<CustomField>
    <fullName>OrderExpectation__c</fullName>
    <label>受注見込</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#A53711</color>
                <label>1 決定</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#FF99FF</color>
                <label>2 有望</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#F3D904</color>
                <label>3 努力</label>
            </value>
            <value>
                <fullName>4C</fullName>
                <color>#B6E32E</color>
                <label>4C チャレンジ</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#66E9BD</color>
                <label>4 希望</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#0B6FCE</color>
                <label>5 需要</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>